crates/cuda-core/tests/derive_device_copy/fail_enum.stderr
error[E0080]: evaluation panicked: aborted execution: attempted to zero-initialize type `Tag`, which is invalid
 --> tests/derive_device_copy/fail_enum.rs:8:23
  |
8 | #[derive(Copy, Clone, DeviceCopy)]
  |                       ^^^^^^^^^^ evaluation of `_` failed here
  |
  = note: this error originates in the derive macro `DeviceCopy` (in Nightly builds, run with -Z macro-backtrace for more info)
